<resources>
    <string name="app_name">Idle Clicker Companion</string>

    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="add_game">Add Game</string>
    <string name="add_an_alarm">Add an Alarm!</string>
    <string name="open_menu_and_add_a_game">Open Menu and add a Game!</string>
    <string name="mo">Mo.</string>
    <string name="tu">Tu.</string>
    <string name="we">We.</string>
    <string name="th">Th.</string>
    <string name="fr">Fr.</string>
    <string name="sa">Sa.</string>
    <string name="so">So.</string>
    <string name="descriptionAlarm">Description e.g. Arena</string>
    <string name="descriptionAppSelect">Description e.g. Username</string>
    <string name="textPickerErrorHint">Field cannot be blank</string>
    <string name="daily">Daily</string>
    <string name="never">Never</string>
    <string name="noAlarmsStartable">No Alarms startable</string>
    <string name="ok">OK</string>

    <string name="lightTheme">Light Theme</string>
    <string name="darkTheme">Dark Theme</string>
</resources>
