<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="alarmModel"
            type="com.graytsar.idleclickercompanion.AlarmModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alarmConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray">

            <View
                android:id="@+id/cardCompletionColor"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:background="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDayRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@{alarmModel.obsTextDays}"
                android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardCompletionColor"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{alarmModel.obsTimeLeft}"
                android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/btnDropDown"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardCompletionColor"
                app:layout_constraintTop_toBottomOf="@+id/textAction" />

            <TextView
                android:id="@+id/textAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{alarmModel.selectedAction}"
                android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/switchStartAlarm"
                app:layout_constraintStart_toEndOf="@+id/cardCompletionColor"
                app:layout_constraintTop_toBottomOf="@+id/textDayRepeat" />

            <Switch
                android:id="@+id/switchStartAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="8dp"
                android:checked="@{alarmModel.startAlarm}"
                android:onClick="@{alarmModel::onClickStartAlarm}"
                android:thumbTint="@color/switch_color"
                android:trackTint="@color/switch_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnDropDown"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:onClick="@{alarmModel::onExpandClick}"
                android:tint="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAction"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

            <HorizontalScrollView
                android:id="@+id/listExpandDays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardCompletionColor"
                app:layout_constraintTop_toBottomOf="@+id/btnDropDown">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <CheckBox
                        android:id="@+id/buttonMonday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[0]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/mo"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonTuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[1]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/tu"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonWednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[2]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/we"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonThursday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[3]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/th"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonFriday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[4]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/fr"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonSaturday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[5]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/sa"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                    <CheckBox
                        android:id="@+id/buttonSunday"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:buttonTint="@{alarmModel.startAlarm == true ? @colorStateList/check_box_color : @colorStateList/check_box_color_completed}"
                        android:checked="@{alarmModel.selectedDaysAr[6]}"
                        android:onClick="@{alarmModel::onDayClick}"
                        android:text="@string/so"
                        android:textColor="@{alarmModel.startAlarm == true ? @color/colorAccent : @color/colorComplementaryGreen}" />

                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>